# sdf-renderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: SDFRenderer.cpp  SDFRenderer.h  main.cpp
src/glutils/: gl_utils.cpp  gl_utils.h
src/renderer/: sdfrenderer.cpp  sdfrenderer.h
src/renderer/scene/: Camera.cpp  Camera.h  camera.cpp  scene.cpp  scene.h  scene_element.cpp  scene_element.h  sdf_box.cpp  sdf_box.h  sdf_cylinder.cpp  sdf_cylinder.h  sdf_shape.cpp  sdf_shape.h  sdf_sphere.cpp  sdf_sphere.h
src/renderer/scene/data/: SDFShaderDataStruct.cpp  SDFShaderDataStruct.h
src/renderer/ui/: scene_ui.cpp  scene_ui.h
src/shader/: Shader.cpp  Shader.h
src/shader/data/: generic_shader_data.cpp  generic_shader_data.h  lighting_shader_data.cpp  lighting_shader_data.h  ray_shader_data.cpp  ray_shader_data.h
src/utils/: fileio.cpp  fileio.h
